[project]
name = "ddl-prhu"
version = "1.0.0" # lol who am I kidding
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies=[
    "fastapi ~=0.115",
    "uvicorn ~=0.32",
    "requests ~=2.32",
    "pydantic ~=2.9",
    "sqlalchemy ~=2.0",
    "alembic ~=1.13",
    "svix ~=1.40",
    "pyjwt ~=2.9"
]

[dependency-groups]
dev = [
    "ruff ~=0.6",
    "bandit ~=1.7",
    "pre-commit ~=4.0",
    "pylint ~=3.3",
    "mypy ~=1.12",
    "types-requests ~=2.32",
    "types-urllib3 ~=1.26",
    "pytest ~=8.3",
    "pytest-asyncio ~=0.24",
    "pytest-cov ~=6.0"
]
